googleサービスアカウント用に変更

--- a/config/template.ini
+++ b/config/template.ini
@@ -1,3 +1,6 @@
+[Google]
+calendar_id = xxxxxxxxxx@xxxxxxxxxx
+
 [Slack]
 channel_id = xxxxxxxxxxx
 token = xoxb-xxxxxxxxxxxxx-xxxxxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxx
